--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="img/attendance.jpg" alt="Smart Attendance Management">
+                        <img src="img/attendance.jpg" alt="Medical Appointment Scheduler">
                     </div>
                     <div class="project-info">
                         <h3>Medical Appointment Scheduler</h3>
